--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 }
 </style>
 <div class="beian-footer">
-  © 你的名字 | 粤ICP备 xxxxxxxx 号 | 粤公网安备 xxxxxxxxxxxx 号
+  © 你的名字 | 粤ICP备 
 </div>
 <!-- ==================== 结束 ==================== -->
 </body>
