--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
-  <!-- ==================== 备案号底部 ==================== -->
+<!-- ==================== 备案号底部（可点击跳转版） ==================== -->
 <style>
 .beian-footer {
   position: fixed;
@@ -34,7 +34,12 @@
   background: rgba(255,255,255,0.95);
   z-index: 9999;
   border-top: 1px solid #eee;
-  pointer-events: none;
+  pointer-events: auto;   /* 关键：允许点击 */
+}
+.beian-footer a {
+  color: #888;
+  text-decoration: underline;
+  pointer-events: auto;
 }
 @media (prefers-color-scheme: dark) {
   .beian-footer {
@@ -42,10 +47,15 @@
     color: #bbb;
     border-top-color: #444;
   }
+  .beian-footer a {
+    color: #bbb;
+  }
 }
 </style>
 <div class="beian-footer">
-  © 你的名字 | 粤ICP备 
+  © 你的名字 | 
+  <a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备 xxxxxxxx 号</a> | 
+  <a href="https://www.beian.gov.cn/" target="_blank">粤公网安备 xxxxxxxxxxxx 号</a>
 </div>
 <!-- ==================== 结束 ==================== -->
 </body>
