--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 }
 </style>
 <div class="beian-footer">
-  <a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备 xxxxxxxx 号</a> | 
+  <a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备 xxxxxxxx 号</a>
 </div>
 <!-- ==================== 结束 ==================== -->
 </body>
