--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 </style>
 <div class="beian-footer">
   © 2026 天北
+  邮箱地址: tianbei@nasnie.cn
   <a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备 xxxxxxxx 号</a>
 </div>
 <!-- ==================== 结束 ==================== -->
