--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   left: 0;
   width: 100%;
   text-align: center;
-  font-size: 13px;
+  font-size: 13px;这个
   color: #888;
   padding: 12px 0 8px;
   background: rgba(255,255,255,0.95);
@@ -54,8 +54,8 @@
 </style>
 <div class="beian-footer">
   ©2026 天北|
-  邮箱: tianbei@nasnie.cn|
-  <a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备xxxxxxxx号</a>
+  <a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备xxxxxxxx号|</a>
+  邮箱: tianbei@nasnie.cn
 </div>
 <!-- ==================== 结束 ==================== -->
 </body>
