--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <div class="beian-footer">
   ©2026 天北|
   <a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备xxxxxxxx号|</a>
-  邮箱: tianbei@nasnie.cn
+  联系邮箱: tianbei@nasnie.cn
 </div>
 <!-- ==================== 结束 ==================== -->
 </body>
