--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </style>
 <div class="beian-footer">
   ©2026 天北|
-  <a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备xxxxxxxx号|</a>
+  <a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备xxxxxxxx号</a>|
   联系邮箱: tianbei@nasnie.cn
 </div>
 <!-- ==================== 结束 ==================== -->
