--- a/index.html
+++ b/index.html
@@ -28,27 +28,35 @@
   left: 0;
   width: 100%;
   text-align: center;
-  font-size: 13px;这个
-  color: #888;
-  padding: 12px 0 8px;
-  background: rgba(255,255,255,0.95);
+  font-size: 12.5px;
+  line-height: 1.4;
+  color: #555;
+  padding: 14px 0 10px;
+  background: rgba(255, 255, 255, 0.72);     /* 透明度 0.72，更透 */
+  backdrop-filter: blur(12px);                /* 毛玻璃模糊效果 */
+  -webkit-backdrop-filter: blur(12px);
+  border-top: 1px solid rgba(255,255,255,0.6);
+  box-shadow: 0 -2px 10px rgba(0,0,0,0.06);
   z-index: 9999;
-  border-top: 1px solid #eee;
-  pointer-events: auto;   /* 关键：允许点击 */
+  transition: all 0.3s ease;
 }
 .beian-footer a {
-  color: #888;
+  color: #0066cc;
+  text-decoration: none;
+}
+.beian-footer a:hover {
   text-decoration: underline;
-  pointer-events: auto;
+  color: #0055aa;
 }
 @media (prefers-color-scheme: dark) {
   .beian-footer {
-    background: rgba(30,30,30,0.95);
-    color: #bbb;
-    border-top-color: #444;
+    background: rgba(30, 30, 40, 0.78);
+    color: #ccc;
+    border-top-color: rgba(255,255,255,0.1);
+    box-shadow: 0 -2px 10px rgba(0,0,0,0.3);
   }
   .beian-footer a {
-    color: #bbb;
+    color: #66aaff;
   }
 }
 </style>
