--- a/index.html
+++ b/index.html
@@ -22,25 +22,21 @@
   <script type="module" src="/src/main.ts"></script>
 <!-- ==================== 备案号底部（可点击跳转版） ==================== -->
 <style>
-#app {
-  padding-bottom: 58px !important;   /* 给主内容留空间，防止被底部遮挡 */
-}
-
 .beian-footer {
-  position: absolute;
+  position: fixed;           /* 固定在屏幕底部，不随滚动移动 */
   bottom: 0;
   left: 0;
   width: 100%;
   text-align: center;
-  font-size: 11px;
-  line-height: 1.2;
+  font-size: 10.5px;
+  line-height: 1.1;
   color: #666;
-  padding: 8px 0 5px;
-  background: rgba(255,255,255,0.75);
+  padding: 4px 0 2px;
+  background: rgba(255,255,255,0.68);
   backdrop-filter: blur(12px);
   -webkit-backdrop-filter: blur(12px);
   border-top: 1px solid rgba(255,255,255,0.6);
-  z-index: 10;
+  z-index: 9999;
 }
 .beian-footer a {
   color: #0066cc;
@@ -51,8 +47,8 @@
 }
 @media (prefers-color-scheme: dark) {
   .beian-footer {
-    background: rgba(25,25,35,0.78);
-    color: #bbb;
+    background: rgba(20,20,30,0.78);
+    color: #aaa;
     border-top-color: rgba(255,255,255,0.1);
   }
   .beian-footer a {
