--- a/index.html
+++ b/index.html
@@ -69,22 +69,35 @@ html, body, #app {
   邮箱: <a href="mailto:tianbei@nasnie.cn" style="color:#555 !important;">tianbei@nasnie.cn</a>
 </div>
 <script>
-// JS强制固定（防止 Vue 滚动层干扰）
-function lockFooter() {
-  const footer = document.querySelector('.beian-footer');
-  if (footer) {
-    footer.style.position = 'fixed';
-    footer.style.bottom = '0';
-    footer.style.left = '0';
-    footer.style.width = '100%';
-    footer.style.zIndex = '2147483647';
+function lockFooterForever() {
+  let footer = document.querySelector('.beian-footer');
+  if (!footer) return;
+
+  // 强制移动到 body 最外层
+  if (footer.parentNode !== document.body) {
+    document.body.appendChild(footer);
   }
-  // 给主内容加内边距，避免遮挡
-  const app = document.getElementById('app');
-  if (app) app.style.paddingBottom = '38px';
+
+  // 强制样式
+  footer.style.position = 'fixed';
+  footer.style.bottom = '0';
+  footer.style.left = '0';
+  footer.style.width = '100%';
+  footer.style.zIndex = '2147483647';
+  footer.style.margin = '0';
+  footer.style.paddingBottom = '2px';
+
+  // 给主内容加 padding 防止遮挡
+  const app = document.getElementById('app') || document.querySelector('body');
+  if (app) app.style.paddingBottom = '42px';
 }
-window.addEventListener('load', lockFooter);
-setTimeout(lockFooter, 800);  // 额外保险，Vue 渲染完成后再次锁定
+
+// 多重保险：页面加载、滚动、定时器、动画帧
+window.addEventListener('load', lockFooterForever);
+window.addEventListener('scroll', lockFooterForever);
+window.addEventListener('resize', lockFooterForever);
+setInterval(lockFooterForever, 100);           // 每100ms强制一次
+requestAnimationFrame(lockFooterForever);
 </script>
 <!-- ==================== 结束 ==================== -->
 </body>
