--- a/index.html
+++ b/index.html
@@ -69,35 +69,40 @@ html, body, #app {
   邮箱: <a href="mailto:tianbei@nasnie.cn" style="color:#555 !important;">tianbei@nasnie.cn</a>
 </div>
 <script>
-function lockFooterForever() {
+function forceFixFooter() {
   let footer = document.querySelector('.beian-footer');
   if (!footer) return;
 
-  // 强制移动到 body 最外层
+  // 强制移到 body 最外层（脱离任何滚动容器）
   if (footer.parentNode !== document.body) {
     document.body.appendChild(footer);
   }
 
-  // 强制样式
+  // 每帧强制样式
   footer.style.position = 'fixed';
   footer.style.bottom = '0';
   footer.style.left = '0';
   footer.style.width = '100%';
   footer.style.zIndex = '2147483647';
   footer.style.margin = '0';
-  footer.style.paddingBottom = '2px';
-
-  // 给主内容加 padding 防止遮挡
-  const app = document.getElementById('app') || document.querySelector('body');
-  if (app) app.style.paddingBottom = '42px';
+  footer.style.transform = 'none';
 }
 
-// 多重保险：页面加载、滚动、定时器、动画帧
-window.addEventListener('load', lockFooterForever);
-window.addEventListener('scroll', lockFooterForever);
-window.addEventListener('resize', lockFooterForever);
-setInterval(lockFooterForever, 100);           // 每100ms强制一次
-requestAnimationFrame(lockFooterForever);
+function startLock() {
+  forceFixFooter();
+  requestAnimationFrame(startLock);   // 每帧锁定
+}
+
+// 多重启动
+window.addEventListener('load', startLock);
+window.addEventListener('DOMContentLoaded', startLock);
+setTimeout(startLock, 500);
+setTimeout(startLock, 1500);
+setInterval(forceFixFooter, 80);   // 额外保险
+
+// 监控Vue动态渲染
+const observer = new MutationObserver(forceFixFooter);
+observer.observe(document.body, { childList: true, subtree: true });
 </script>
 <!-- ==================== 结束 ==================== -->
 </body>
