--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
   left: 0 !important;
   width: 100% !important;
   text-align: center;
-  font-size: 9.5px;
+  font-size: 9px !important;                    /* 调小到 9px */
+  font-family: "MiSans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !important;
+  font-weight: 400;
   line-height: 1;
   color: #777;
   padding: 1px 0 0;
-  background: rgba(255,255,255,0.60) !important;     /* 透明度 0.6 */
+  background: rgba(255,255,255,0.60) !important;
   backdrop-filter: blur(20px) saturate(180%) contrast(110%) !important;
   -webkit-backdrop-filter: blur(20px) saturate(180%) contrast(110%) !important;
   border-top: none !important;
@@ -48,7 +50,7 @@
 }
 @media (prefers-color-scheme: dark) {
   .beian-footer {
-    background: rgba(15,15,25,0.65) !important;     /* 暗模式 0.65 */
+    background: rgba(15,15,25,0.65) !important;
     color: #bbb;
     box-shadow: 0 -1px 0 rgba(255,255,255,0.15) inset, 0 -2px 6px rgba(0,0,0,0.25);
   }
