--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <div class="beian-footer" style="text-align:center; font-size:13px; color:#555 !important; line-height:1.8; white-space:normal !important; overflow:visible !important; width:100% !important; display:block !important;">
   ©2026 天北 | 
   <a href="https://beian.miit.gov.cn/" target="_blank" style="color:#555 !important; text-decoration:none !important;">粤ICP备xxxxxxxx号</a> | 
-  邮箱: <a href="mailto:tianbei@nasnie.cn" style="color:#555 !important;">lqy@nasnie.cn</a>
+  邮箱: <a href="mailto:tianbei@nasnie.cn" style="color:#555 !important;">tianbei@nasnie.cn</a>
 </div>
 <!-- ==================== 结束 ==================== -->
 </body>
