--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
   left: 0 !important;
   width: 100% !important;
   text-align: center;
-  font-size: 9px !important;                    /* 调小到 9px */
+  font-size: 9px !important;
   font-family: "MiSans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !important;
-  font-weight: 400;
+  font-weight: 500 !important;           /* 略微加粗，好看程度最佳 */
+  letter-spacing: 0.2px;                 /* 轻微字间距，更精致 */
   line-height: 1;
   color: #777;
   padding: 1px 0 0;
