--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
   text-align: center;
   font-size: 9px !important;
   font-family: "MiSans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !important;
-  font-weight: 500 !important;           /* 略微加粗，好看程度最佳 */
-  letter-spacing: 0.2px;                 /* 轻微字间距，更精致 */
+  font-weight: 400;
   line-height: 1;
   color: #777;
   padding: 1px 0 0;
@@ -41,6 +40,9 @@
   border-top: none !important;
   box-shadow: 0 -1px 0 rgba(255,255,255,0.35) inset, 0 -2px 6px rgba(0,0,0,0.05);
   z-index: 2147483647 !important;
+}
+.beian-footer .beian-strong {
+  font-weight: 600 !important;     /* 只加粗备案号 */
 }
 .beian-footer a {
   color: #0066cc;
