--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
   <script type="module" src="/src/main.ts"></script>
 <!-- ==================== 备案号底部（可点击跳转版） ==================== -->
 <style>
+  html, body, #app, *, .light-panel, .card, .title, .desc, button, input {
+  font-family: "MiSans", "MiSans VF", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !important;
+}
+
 .beian-footer {
   position: fixed !important;
   bottom: 0 !important;
