--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <script type="module" src="/src/main.ts"></script>
 <!-- ==================== 备案号底部（可点击跳转版） ==================== -->
 <style>
-  html, body, #app, *, .light-panel, .card, .title, .desc, button, input {
+  html, body, #app, h1, h2, h3, h4, h5, h6, p, span, div:not([class*="icon"]), button, input, label, .title, .desc, .card, .text {
   font-family: "MiSans", "MiSans VF", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !important;
 }
 
